--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.7.12"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
